@@ -38,6 +38,7 @@ K  6336	handle multiple IMAP BODY elements in a single FETCH response
 K  6352	add more efficient way to monitor multiple folders for new messages
 K  6353	Include a subject formatter for the logging package
 K  6365	Broken equals in URLName, NewsAddress
+K  6366	NullPointerException in ContentType.match
 
 
 		  CHANGES IN THE 1.5.1 RELEASE
